<resources>
    <string name="app_name">single</string>
    <string name="add_buttom">Botao de adicionar</string>
    <string name="label">label</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="not_account">Não tem uma conta? Crie aqui!</string>
    <string name="create_account">Cadastrar</string>
    <string name="name">Nome</string>
    <string name="photo">Photo</string>
</resources>