<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/btn_image_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:text="@string/photo"
        android:background="@drawable/btn_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photo_selected"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:src="@color/black"
        app:layout_constraintTop_toTopOf="@+id/btn_image_profile"
        app:layout_constraintBottom_toBottomOf="@+id/btn_image_profile"
        app:layout_constraintStart_toStartOf="@+id/btn_image_profile"
        app:layout_constraintEnd_toEndOf="@+id/btn_image_profile"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_name_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_image_profile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/e_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/et_email_input"
        app:layout_constraintStart_toStartOf="@id/et_email_input"
        app:layout_constraintTop_toBottomOf="@id/et_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passinput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/reg_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/et_password_input"
        app:layout_constraintStart_toStartOf="@id/et_password_input"
        app:layout_constraintTop_toBottomOf="@id/et_password_input" />

</androidx.constraintlayout.widget.ConstraintLayout>